--- a/configuration.yaml
+++ b/configuration.yaml
@@ -10,9 +10,46 @@ homeassistant:
   unit_system: metric
   # Pick yours from here: http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
   time_zone: Europe/London
+  customize:
+    # Add an entry for each entity that you want to overwrite.
+    switch.fly_killer:
+      friendly_name: Zapper
+      entity_picture: /local/biohazard.png
+    sensor.aeotec_zw100_multisensor_6_burglar_2_10:
+      friendly_name: Living Room Motion
+    sensor.aeotec_zw100_multisensor_6_luminance_2_3:
+      friendly_name: Living Room Light Level
+    sensor.aeotec_zw100_multisensor_6_relative_humidity_2_5:
+      friendly_name: Living Room Humidity
+    sensor.aeotec_zw100_multisensor_6_temperature_2_1:
+      friendly_name: Living Room Temperature
+    sensor.aeotec_zw100_multisensor_6_ultraviolet_2_27:
+      friendly_name: Living Room UV
+    device_tracker.nashome:
+      friendly_name: Living Room NAS
+    media_player.living_room_ue40ku6000:
+      friendly_name: Living Room TV
+    sensor.hallway_thermostat_temperature:
+      friendly_name: Hallway Thermostat
+    sensor.hallway_thermostat_humidity:
+      friendly_name: Hallway Humidity
+    sensor.hallway_thermostat_operation_mode:
+      friendly_name: Hallway Heat Mode
+    sensor.hallway_thermostat_target:
+      friendly_name: Hallway Temp Target
+    sensor.dark_sky_humidity:
+      friendly_name: Outside Humidity
+    sensor.dark_sky_nearest_storm_distance:
+      friendly_name: Nearest Storm
+    sensor.dark_sky_pressure:
+      friendly_name: Air Pressure
+    sensor.dark_sky_temperature:
+      friendly_name: Outside Temp
+    sensor.dark_sky_wind_speed:
+      friendly_name: Wind Speed
 
 # Show links to resources in log and frontend
-introduction:
+#introduction:
 
 # Enables the frontend
 frontend:
@@ -60,22 +97,38 @@ emulated_hue:
   host_ip: 192.168.1.141
   listen_port: 80
 
+# nmap tracker
+device_tracker:
+  - platform: nmap_tracker
+    hosts: 192.168.1.1/24
+    home_interval: 10
+
 # Pushbullet
 notify:
   - name: Ro
     platform: pushbullet
     api_key: !secret pushbullet_api_key
 
-# rules
+# Automation rules
 automation:
-  trigger:
-    platform: homeassistant
-    # Event can also be 'shutdown'
-    event: start
-  action:
-    - service: tts.google_say
+  - alias: "Announce Startup"
+    trigger:
+      platform: homeassistant
+      # Event can also be 'shutdown'
+      event: start
+    action:
+      service: tts.google_say
       data:
         message: 'Home assistant has started'
+  - alias: "Warn Sunset Soon"
+    trigger:
+      platform: sun
+      event: sunset
+      offset: '+02:00:00'
+    action:
+      service: tts.google_say
+      data:
+        message: 'The sun will set in two hours'
 
 # Allows you to issue voice commands from the frontend in enabled browsers
 conversation:
@@ -108,6 +161,6 @@ tts:
     cache: true
     cache_dir: /tmp/tts
     time_memory: 300
-    language: de
+#    language: de
 
 group: !include groups.yaml
