--- a/configuration.yaml
+++ b/configuration.yaml
@@ -11,42 +11,94 @@ homeassistant:
   # Pick yours from here: http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
   time_zone: Europe/London
   customize:
-    # Add an entry for each entity that you want to overwrite.
+    # ------------------------------------------------------
+    # Local Devices
+    zwave.aeotec_zw090_zstick_gen5_eu_1:
+      hidden: yes
+    zwave.aeotec_zw100_multisensor_6_2:
+      hidden: yes
+    # ------------------------------------------------------
+    # Kitchen Devices
     switch.fly_killer:
       friendly_name: Zapper
       entity_picture: /local/biohazard.png
+    media_player.kitchen_home:
+      friendly_name: Google Home
+    media_player.kitchen_tv:
+      friendly_name: Kitchen TV
+    # ------------------------------------------------------
+    # Living Room Devices
+    binary_sensor.aeotec_zw100_multisensor_6_sensor_2_0:
+      hidden: yes
+    sensor.aeotec_zw100_multisensor_6_alarm_level_2_1:
+      friendly_name: Living Room Alarm Level
+      hidden: yes
+    sensor.aeotec_zw100_multisensor_6_alarm_type_2_0:
+      friendly_name: Living Room Alarm Type
+      hidden: yes
     sensor.aeotec_zw100_multisensor_6_burglar_2_10:
       friendly_name: Living Room Motion
     sensor.aeotec_zw100_multisensor_6_luminance_2_3:
       friendly_name: Living Room Light Level
     sensor.aeotec_zw100_multisensor_6_relative_humidity_2_5:
       friendly_name: Living Room Humidity
+    sensor.aeotec_zw100_multisensor_6_sourcenodeid_2_2:
+      friendly_name: Living Room Source Multisensor Node ID
+      hidden: yes
     sensor.aeotec_zw100_multisensor_6_temperature_2_1:
       friendly_name: Living Room Temperature
     sensor.aeotec_zw100_multisensor_6_ultraviolet_2_27:
       friendly_name: Living Room UV
     device_tracker.nashome:
       friendly_name: Living Room NAS
+      hidden: yes
     media_player.living_room_ue40ku6000:
       friendly_name: Living Room TV
-    sensor.hallway_thermostat_temperature:
-      friendly_name: Hallway Thermostat
+      hidden: yes
+    # ------------------------------------------------------
+    # Hallway Devices
+    binary_sensor.hallway_thermostat_fan:
+      friendly_name: Hallway Thermostat Fan
+      hidden: yes
+    binary_sensor.hallway_thermostat_has_leaf:
+      friendly_name: Hallway Thermostat Has Fan
+      hidden: yes
+    binary_sensor.hallway_thermostat_is_locked:
+      friendly_name: Hallway Thermostat Is Locked
+      hidden: yes
+    binary_sensor.hallway_thermostat_is_using_emergency_heat:
+      friendly_name: Hallway Thermostat Emergency Heat
+      hidden: yes
     sensor.hallway_thermostat_humidity:
-      friendly_name: Hallway Humidity
+      friendly_name: Hallway Humidity Current
+    sensor.hallway_thermostat_hvac_state:
+      hidden: yes
+    sensor.hallway_thermostat_temperature:
+      friendly_name: Hallway Thermostat Current
     sensor.hallway_thermostat_operation_mode:
       friendly_name: Hallway Heat Mode
     sensor.hallway_thermostat_target:
-      friendly_name: Hallway Temp Target
+      friendly_name: Hallway Temperature Target
+    # ------------------------------------------------------
+    # Outdoor devices
     sensor.dark_sky_humidity:
       friendly_name: Outside Humidity
     sensor.dark_sky_nearest_storm_distance:
       friendly_name: Nearest Storm
     sensor.dark_sky_pressure:
       friendly_name: Air Pressure
+    sensor.dark_sky_summary:
+      friendly_name: Summary
     sensor.dark_sky_temperature:
       friendly_name: Outside Temp
     sensor.dark_sky_wind_speed:
       friendly_name: Wind Speed
+    # ------------------------------------------------------
+    # Automations
+    automation.announce_startup:
+      hidden: yes
+    automation.warn_sunset_soon:
+      hidden: yes
 
 # Show links to resources in log and frontend
 #introduction:
