--- a/configuration.yaml
+++ b/configuration.yaml
@@ -10,95 +10,7 @@ homeassistant:
   unit_system: metric
   # Pick yours from here: http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
   time_zone: Europe/London
-  customize:
-    # ------------------------------------------------------
-    # Local Devices
-    zwave.aeotec_zw090_zstick_gen5_eu_1:
-      hidden: yes
-    zwave.aeotec_zw100_multisensor_6_2:
-      hidden: yes
-    # ------------------------------------------------------
-    # Kitchen Devices
-    switch.fly_killer:
-      friendly_name: Zapper
-      entity_picture: /local/biohazard.png
-    media_player.kitchen_home:
-      friendly_name: Google Home
-    media_player.kitchen_tv:
-      friendly_name: Kitchen TV
-    # ------------------------------------------------------
-    # Living Room Devices
-    binary_sensor.aeotec_zw100_multisensor_6_sensor_2_0:
-      hidden: yes
-    sensor.aeotec_zw100_multisensor_6_alarm_level_2_1:
-      friendly_name: Living Room Alarm Level
-      hidden: yes
-    sensor.aeotec_zw100_multisensor_6_alarm_type_2_0:
-      friendly_name: Living Room Alarm Type
-      hidden: yes
-    sensor.aeotec_zw100_multisensor_6_burglar_2_10:
-      friendly_name: Living Room Motion
-    sensor.aeotec_zw100_multisensor_6_luminance_2_3:
-      friendly_name: Living Room Light Level
-    sensor.aeotec_zw100_multisensor_6_relative_humidity_2_5:
-      friendly_name: Living Room Humidity
-    sensor.aeotec_zw100_multisensor_6_sourcenodeid_2_2:
-      friendly_name: Living Room Source Multisensor Node ID
-      hidden: yes
-    sensor.aeotec_zw100_multisensor_6_temperature_2_1:
-      friendly_name: Living Room Temperature
-    sensor.aeotec_zw100_multisensor_6_ultraviolet_2_27:
-      friendly_name: Living Room UV
-    device_tracker.nashome:
-      friendly_name: Living Room NAS
-      hidden: yes
-    media_player.living_room_ue40ku6000:
-      friendly_name: Living Room TV
-      hidden: yes
-    # ------------------------------------------------------
-    # Hallway Devices
-    binary_sensor.hallway_thermostat_fan:
-      friendly_name: Hallway Thermostat Fan
-      hidden: yes
-    binary_sensor.hallway_thermostat_has_leaf:
-      friendly_name: Hallway Thermostat Has Fan
-      hidden: yes
-    binary_sensor.hallway_thermostat_is_locked:
-      friendly_name: Hallway Thermostat Is Locked
-      hidden: yes
-    binary_sensor.hallway_thermostat_is_using_emergency_heat:
-      friendly_name: Hallway Thermostat Emergency Heat
-      hidden: yes
-    sensor.hallway_thermostat_humidity:
-      friendly_name: Hallway Humidity Current
-    sensor.hallway_thermostat_hvac_state:
-      hidden: yes
-    sensor.hallway_thermostat_temperature:
-      friendly_name: Hallway Thermostat Current
-    sensor.hallway_thermostat_operation_mode:
-      friendly_name: Hallway Heat Mode
-    sensor.hallway_thermostat_target:
-      friendly_name: Hallway Temperature Target
-    # ------------------------------------------------------
-    # Outdoor devices
-    sensor.dark_sky_humidity:
-      friendly_name: Outside Humidity
-    sensor.dark_sky_nearest_storm_distance:
-      friendly_name: Nearest Storm
-    sensor.dark_sky_pressure:
-      friendly_name: Air Pressure
-    sensor.dark_sky_summary:
-      friendly_name: Summary
-    sensor.dark_sky_temperature:
-      friendly_name: Outside Temp
-    sensor.dark_sky_wind_speed:
-      friendly_name: Wind Speed
-    # ------------------------------------------------------
-    # Automations
-    automation.announce_startup:
-      hidden: yes
-    automation.warn_sunset_soon:
-      hidden: yes
+  customize: !include customize.yaml
 
 # Show links to resources in log and frontend
 #introduction:
@@ -110,10 +22,16 @@ frontend:
 config:
 
 http:
-  # Uncomment this to add a password (recommended!)
   api_password: !secret http_api_password
+  ssl_certificate: !secret ssl_certificate
+  ssl_key: !secret ssl_key
   # Uncomment this if you are using SSL or running in Docker etc
-  # base_url: example.duckdns.org:8123
+  base_url: !secret base_url
+  # base_url: 192.168.1.141
+  trusted_networks:
+    - 127.0.0.1
+    - ::1
+    - 192.168.2.0/24
 
 # Checks for available updates
 # Note: This component will send some information about your system to
@@ -126,24 +44,44 @@ updater:
 discovery:
 
 # Manual Devices
+mqtt:
+  broker: 192.168.1.141
+  port: 1883
+  protocol: 3.1
+  client_id: home-assistant-1
+  keepalive: 60
+  username: !secret mos_user
+  password: !secret mos_pwd
+#  broker: !secret cloud_mqtt_server
+#  port: !secret cloud_mqtt_port
+#  keepalive: 60
+#  client_id: home-assitant-1
+#  username: !secret cloudmqtt_user
+#  password: !secret cloudmqtt_pwd
+
 zwave:
   usb_path: /dev/ttyACM0
-  config_path: /srv/homeassistant/lib/python3.4/site-packages/python_openzwave/ozw_config 
+  config_path: /srv/homeassistant/lib/python3.4/site-packages/python_openzwave/ozw_config
 
 nest:
   client_id: !secret nest_client_id
   client_secret: !secret nest_client_secret
-  
+
 media_player:
   - platform: plex
   - platform: cast
+  - platform: kodi
+    name: Front Room Kodi
+    host: 192.168.1.148
+    username: !secret kodi_user
+    password: !secret kodi_pwd
 
-# fly killer    
+# fly killer
 switch:
   - platform: tplink
     host: 192.168.1.168
     name: Fly Killer
-    
+
 # Google Home
 emulated_hue:
   host_ip: 192.168.1.141
@@ -154,6 +92,8 @@ device_tracker:
   - platform: nmap_tracker
     hosts: 192.168.1.1/24
     home_interval: 10
+  - platform: owntracks
+    max_gps_accuracy: 200
 
 # Pushbullet
 notify:
@@ -162,25 +102,7 @@ notify:
     api_key: !secret pushbullet_api_key
 
 # Automation rules
-automation:
-  - alias: "Announce Startup"
-    trigger:
-      platform: homeassistant
-      # Event can also be 'shutdown'
-      event: start
-    action:
-      service: tts.google_say
-      data:
-        message: 'Home assistant has started'
-  - alias: "Warn Sunset Soon"
-    trigger:
-      platform: sun
-      event: sunset
-      offset: '+02:00:00'
-    action:
-      service: tts.google_say
-      data:
-        message: 'The sun will set in two hours'
+automation: !include automation.yaml
 
 # Allows you to issue voice commands from the frontend in enabled browsers
 conversation:
@@ -206,6 +128,12 @@ sensor:
       - pressure
       - humidity
       - wind_speed
+  - platform: moon
+  - platform: template
+    sensors:
+      aeotec_multisensor_motion_template:
+        value_template: "{%if states.sensor.aeotec_zw100_multisensor_6_burglar_2_10.state == '8' %}motion detected{% elif states.sensor.aeotec_zw100_multisensor_6_burglar_2_10.state == '0' %}standby{% elif states.sensor.aeotec_zw100_multisensor_6_burglar_2_10.state == '3' %}tamper detected{% endif %}"
+        friendly_name: "Aeotec PIR"
 
 # Text to speech
 tts:
